[package]
name = "pkcs11"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.1"
failure = "0.1"
lazy_static = "1"
libloading = "0.5"
log = "0.4"
num-bigint = "0.2"
scopeguard = "1.0"

pkcs11-sys = { path = "../pkcs11-sys" }

[dev-dependencies]
base64 = "0.10.1"
env_logger = "0.6"
futures = "0.1"
hyper = "0.12"
hyper-rustls = "0.16"
rustls = "0.15"
tokio = "0.1"
tokio-rustls = "0.9"
webpki = "0.19"
