[package]
name = "pkcs11"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.1"
failure = "0.1"
lazy_static = "1"
libloading = "0.5"
log = "0.4"
num-bigint = "0.2"
scopeguard = "1.0"

pkcs11-sys = { path = "../pkcs11-sys" }

[dev-dependencies]
base64 = "0.10.1"
env_logger = "0.6"
